<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchMovieOnline">

    <include layout="@layout/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/searchTxtViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/searchEditText"
            android:backgroundTint="@android:color/darker_gray"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            />

        <Button
            android:id="@+id/goBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:onClick="goBtnClick" />
    </LinearLayout>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="cancelClick" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/cancelBtn"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

</RelativeLayout>
